--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -16,7 +16,12 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v1
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: ${{ matrix.python-version }}	    
+    - name: Start Mock Server
+      run: |
+         docker pull lkdevelopment/hetzner-cloud-api-mock
+         docker run -d -p 127.0.0.1:4000:8080 lkdevelopment/hetzner-cloud-api-mock
+         docker ps -a
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
